--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 <body>
 
   <img
-    src="https://raw.githubusercontent.com/Carloseduardo-dev/Carloseduardo-dev/1dbbe8f6fe80da78abd256ec52e907fc40e215bb/fotoperfil.pgn.jpg"
-    alt="Foto de perfil"
+    src="perfilGit.pgn.JPG" alt="foto de perfil"
     class="profile-img"
   />
 
