--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
 
   <img
-    src="perfilGit.pgn.JPG" alt="foto de perfil"
+    src="perfilGit2.pgn.jpg" alt="foto de perfil"
     class="profile-img"
   />
 
