Update and rename index.html to minhas_redes.html

--- a/minhas_redes.html
+++ b/minhas_redes.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      background: linear-gradient(to right, #2b2b2b, #1e1e1e, #0f0f0f);
       color: white;
       display: flex;
       flex-direction: column;
