--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+html_content = """
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -9,78 +10,82 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #2b2b2b, #1e1e1e, #0f0f0f);
+      background: radial-gradient(circle at top, #1c1c1c, #121212);
       color: white;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
-      height: 100vh;
-      padding: 20px;
+      min-height: 100vh;
+      padding: 40px 20px;
     }
 
     .profile-img {
-      margin-top: 40px;
-      width: 150px;
-      height: 150px;
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
-      border: 4px solid #00FFFF;
       object-fit: cover;
+      border: 3px solid white;
+      margin-bottom: 15px;
     }
 
     h1 {
-      margin-top: 20px;
-      font-size: 28px;
+      font-size: 1.5em;
+      margin: 10px 0 30px 0;
     }
 
-    .links {
-      margin-top: 30px;
+    .link {
       display: flex;
-      flex-direction: column;
-      gap: 15px;
-      width: 100%;
-      max-width: 300px;
-    }
-
-    .link-button {
-      background-color: #00FFFF;
-      color: #000;
-      padding: 12px;
-      text-align: center;
+      align-items: center;
+      background-color: #000;
+      padding: 15px 20px;
+      border-radius: 15px;
       text-decoration: none;
+      color: white;
       font-weight: bold;
-      border-radius: 8px;
-      transition: background 0.3s;
+      margin: 10px 0;
+      width: 90%;
+      max-width: 500px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+      transition: transform 0.2s, background 0.2s;
     }
 
-    .link-button:hover {
-      background-color: #00ced1;
+    .link:hover {
+      transform: scale(1.02);
+      background-color: #1a1a1a;
     }
 
-    footer {
-      position: absolute;
-      bottom: 20px;
-      font-size: 12px;
-      opacity: 0.6;
+    .link img {
+      width: 40px;
+      height: 40px;
+      border-radius: 10px;
+      margin-right: 15px;
     }
   </style>
 </head>
 <body>
+  <img src="https://raw.githubusercontent.com/Carloseduardo-dev/Carloseduardo-dev/main/fotoperfil.pgn.jpg" alt="Carlos Eduardo" class="profile-img" />
+  <h1>@carloseduardo-dev</h1>
 
-  <img
-    src="perfilGit2.pgn.jpg" alt="foto de perfil"
-    class="profile-img"
-  />
+  <a class="link" href="https://www.instagram.com/lm_caduu" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" />
+    Instagram
+  </a>
 
-  <h1>@lm_caduu</h1>
+  <a class="link" href="https://www.linkedin.com/in/carlos-eduardo-ferreira-132295200" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" />
+    LinkedIn
+  </a>
 
-  <div class="links">
-    <a class="link-button" href="https://github.com/Carloseduardo-dev" target="_blank">🌐 GitHub</a>
-    <a class="link-button" href="https://www.instagram.com/lm_caduu" target="_blank">📷 Instagram</a>
-    <a class="link-button" href="https://linkedin.com/in/carlos-eduardo-ferreira-132295200" target="_blank">💼 LinkedIn</a>
-    <a class="link-button" href="https://discord.com/users/cadu_021" target="_blank">💬 Discord: cadu_021</a>
-  </div>
+  <a class="link" href="https://github.com/Carloseduardo-dev" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub" />
+    GitHub
+  </a>
 
+  <a class="link" href="https://discord.com/users/cadu_021" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/3670/3670157.png" alt="Discord" />
+    Discord: cadu_021
+  </a>
+  
   <footer>© 2025 Carlos Eduardo</footer>
 </body>
 </html>
