--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-html_content = """
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -64,7 +62,7 @@ html_content = """
 </head>
 <body>
   <img src="https://raw.githubusercontent.com/Carloseduardo-dev/Carloseduardo-dev/main/fotoperfil.pgn.jpg" alt="Carlos Eduardo" class="profile-img" />
-  <h1>@carloseduardo-dev</h1>
+  <h1>perfilGit.pgn.JPG</h1>
 
   <a class="link" href="https://www.instagram.com/lm_caduu" target="_blank">
     <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" />
