--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   </style>
 </head>
 <body>
-  <img src="https://raw.githubusercontent.com/Carloseduardo-dev/Carloseduardo-dev/main/fotoperfil.pgn.jpg" alt="Carlos Eduardo" class="profile-img" />
-  <h1>perfilGit.pgn.JPG</h1>
+  <img src=https://github.com/Carloseduardo-dev/carloseduardo-dev.github.io/blob/b25c218881f02ce8c309c706783c00e59c30ad7f/perfilGit2.pgn.jpg/>
+  <h1>perfilGit2.pgn.jpg</h1>
 
   <a class="link" href="https://www.instagram.com/lm_caduu" target="_blank">
     <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" />
