--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </style>
 </head>
 <body>
-  <img src=https://github.com/Carloseduardo-dev/carloseduardo-dev.github.io/blob/b25c218881f02ce8c309c706783c00e59c30ad7f/perfilGit2.pgn.jpg/>
+  <img class="profile-img" src="https://raw.githubusercontent.com/Carloseduardo-dev/carloseduardo-dev.github.io/b25c218881f02ce8c309c706783c00e59c30ad7f/perfilGit2.pgn.jpg" alt="Foto de perfil" />
   <h1>perfilGit2.pgn.jpg</h1>
 
   <a class="link" href="https://www.instagram.com/lm_caduu" target="_blank">
