--- a/index.html
+++ b/index.html
@@ -58,11 +58,17 @@
       border-radius: 10px;
       margin-right: 15px;
     }
+
+    footer {
+      margin-top: 40px;
+      font-size: 0.9em;
+      color: #aaa;
+    }
   </style>
 </head>
 <body>
   <img class="profile-img" src="https://raw.githubusercontent.com/Carloseduardo-dev/carloseduardo-dev.github.io/b25c218881f02ce8c309c706783c00e59c30ad7f/perfilGit2.pgn.jpg" alt="Foto de perfil" />
-  <h1>perfilGit2.pgn.jpg</h1>
+  <h1>@Carloseduardo-dev</h1>
 
   <a class="link" href="https://www.instagram.com/lm_caduu" target="_blank">
     <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" />
@@ -83,7 +89,7 @@
     <img src="https://cdn-icons-png.flaticon.com/512/3670/3670157.png" alt="Discord" />
     Discord: cadu_021
   </a>
-  
+
   <footer>© 2025 Carlos Eduardo</footer>
 </body>
 </html>
