--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Carlos Eduardo | Backend Developer</title>
+  <title>Carlos Eduardo Ferreira | Backend Developer</title>
   <style>
     * {
       margin: 0;
@@ -481,34 +481,34 @@
   <div class="container">
     <div class="profile-section">
       <img class="profile-img" src="https://raw.githubusercontent.com/Carloseduardo-dev/carloseduardo-dev.github.io/b25c218881f02ce8c309c706783c00e59c30ad7f/perfilGit2.pgn.jpg" alt="Carlos Eduardo - Backend Developer" />
-      <h1 class="name">Carlos Eduardo</h1>
+      <h1 class="name">Carlos Eduardo Ferreira</h1>
       <p class="title">Backend Developer</p>
     </div>
 
     <div class="links-container">
       <a class="link" href="https://www.linkedin.com/in/carlos-eduardo-ferreira-132295200" target="_blank" rel="noopener noreferrer">
         <img class="link-icon" src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" />
-        <span class="link-title">LinkedIn</span>
+        <span class="link-title">Carlos Eduardo Ferreira</span>
       </a>
 
       <a class="link" href="https://github.com/Carloseduardo-dev" target="_blank" rel="noopener noreferrer">
         <img class="link-icon" src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub" />
-        <span class="link-title">GitHub</span>
+        <span class="link-title">Carloseduardo-dev</span>
       </a>
 
       <a class="link" href="https://www.instagram.com/lm_caduu" target="_blank" rel="noopener noreferrer">
         <img class="link-icon" src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" />
-        <span class="link-title">Instagram</span>
+        <span class="link-title">im_cadu01</span>
       </a>
 
       <a class="link" href="https://discord.com/users/cadu_021" target="_blank" rel="noopener noreferrer">
         <img class="link-icon" src="https://cdn-icons-png.flaticon.com/512/3670/3670157.png" alt="Discord" />
-        <span class="link-title">Discord</span>
+        <span class="link-title">im_cadu01</span>
       </a>
     </div>
 
     <div class="footer">
-      © 2025 Carlos Eduardo
+      © 2025 Carlos Eduardo Ferreira
     </div>
   </div>
 </body>
