--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      /*border: 3px solid #ffffff;*/
+      border: 1px solid #ffffff;
       margin-bottom: 24px;
       box-shadow: 
         0 8px 32px rgba(0, 0, 0, 0.3),
