--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
         <span class="link-title">Carloseduardo-dev</span>
       </a>
 
-      <a class="link" href="https://www.instagram.com/lm_caduu" target="_blank" rel="noopener noreferrer">
+      <a class="link" href="https://www.instagram.com/im_cadu01/" target="_blank" rel="noopener noreferrer">
         <img class="link-icon" src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" />
         <span class="link-title">im_cadu01</span>
       </a>
