--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <div class="container">
     <div class="profile-section">
-      <img class="profile-img" src="https://raw.githubusercontent.com/Carloseduardo-dev/carloseduardo-dev.github.io/b25c218881f02ce8c309c706783c00e59c30ad7f/perfilGit2.png" alt="Carlos Eduardo - Backend Developer" />
+      <img class="profile-img" src="https://github.com/Carloseduardo-dev/im_cadu01/blob/9886196c95a58e0964de4ea546bb1531167795ce/perfilGit2.png" alt="Carlos Eduardo - Backend Developer" />
       <h1 class="name">Carlos Eduardo Ferreira</h1>
       <p class="title">Backend Developer</p>
     </div>
