--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <div class="container">
     <div class="profile-section">
-      <img class="profile-img" src="perfilGit2.png" alt="Carlos Eduardo - Backend Developer" />
+      <img class="profile-img" src="https://github.com/Carloseduardo-dev/im_cadu01/blob/cd1d3e2271841620dd95d397bca26063bace044d/perfilGit2.png" alt="Carlos Eduardo - Backend Developer" />
       <h1 class="name">Carlos Eduardo Ferreira</h1>
       <p class="title">Backend Developer</p>
     </div>
