--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   <div class="container">
     <div class="profile-section">
       <img class="profile-img" src="https://raw.githubusercontent.com/Carloseduardo-dev/im_cadu01/main/perfilGit2.png" alt="Carlos Eduardo - Backend Developer" />
+      <!--<img class="profile-img" src="https://raw.githubusercontent.com/Carloseduardo-dev/im_cadu01/main/perfilGit2.png" alt="Carlos Eduardo - Backend Developer" />  -->
       <h1 class="name">Carlos Eduardo Ferreira</h1>
       <p class="title">Backend Developer</p>
     </div>
