--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   
-  <!-- Animated Code Background -->
+  <!-- Animated Code Background 
   <div class="code-background">
   <div class="code-line" style="top: 5%;">print("Bem-vindo ao portfólio do Cadu, desenvolvedor backend")</div>
   <div class="code-line" style="top: 15%;">const hobbies = ["violão", "codar", "trap", "games", "animes", "futebol", "Desenhar"];</div>
@@ -28,7 +28,7 @@
   <div class="code-line" style="top: 75%;"># Prioridades alimentares de um dev feliz 🍽️ lasanha &gt; pizza &gt; miojo</div>
   <div class="code-line" style="top: 85%;">git commit -m "feat: adiciona paixão por backend, animes e código limpo"</div>
   <div class="code-line" style="top: 95%;">def cadu():print("Python, MySQL, JS")</div>
-</div>
+</div> -->
 
 
 <!-- Floating Tech Icons -->
